sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: reassignment to val
				 tri = false;
                                     ^AlgBubbleSort1:12: error: reassignment to val
				 tri = true;
                                     ^